--- a/MyApplication1/app/src/main/res/values/strings.xml
+++ b/MyApplication1/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
 	<string name="width">画笔宽度</string>
 	<string name="blur">模糊效果</string>
 	<string name="emboss">浮雕效果</string>
+        <string name="gesture_name">请填手势名</string>
+        <string name="gestureTip">请在屏幕上绘制手势</string>
 </resources>
